[gd_scene load_steps=11 format=2]

[ext_resource path="res://plants/BasePlant.tscn" type="PackedScene" id=1]
[ext_resource path="res://plants/PipeNetwork.gd" type="Script" id=2]

[sub_resource type="Curve3D" id=1]
_data = {
"points": PoolVector3Array(  ),
"tilts": PoolRealArray(  )
}

[sub_resource type="VisualShaderNodeColorUniform" id=2]
uniform_name = "albedo"

[sub_resource type="VisualShaderNodeScalarConstant" id=3]
constant = 0.4

[sub_resource type="VisualShader" id=4]
code = "shader_type spatial;
render_mode specular_schlick_ggx;

uniform vec4 albedo : hint_color;



void vertex() {
// Output:0

}

void fragment() {
// ColorUniform:2
	vec3 n_out2p0 = albedo.rgb;
	float n_out2p1 = albedo.a;

// Scalar:4
	float n_out4p0 = 0.400000;

// Output:0
	ALBEDO = n_out2p0;
	ALPHA = n_out4p0;

}

void light() {
// Output:0

}
"
nodes/fragment/2/node = SubResource( 2 )
nodes/fragment/2/position = Vector2( 160, 160 )
nodes/fragment/4/node = SubResource( 3 )
nodes/fragment/4/position = Vector2( 100, 300 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0, 4, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/albedo = Color( 0.262745, 0.380392, 0.517647, 1 )

[sub_resource type="SphereMesh" id=6]
material = SubResource( 5 )
radius = 0.5
height = 1.0
radial_segments = 16
rings = 8

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 4 )
shader_param/albedo = Color( 0.694118, 0.352941, 0.235294, 1 )

[sub_resource type="SphereMesh" id=8]
material = SubResource( 7 )
radius = 0.5
height = 1.0
radial_segments = 16
rings = 8

[node name="PipeNetwork" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="MeshInstance" parent="." index="0"]
visible = false
mesh = null

[node name="Path" type="Path" parent="." index="4"]
curve = SubResource( 1 )

[node name="StartPointMesh" type="MeshInstance" parent="." index="5"]
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = null

[node name="EndPointMesh" type="MeshInstance" parent="." index="6"]
visible = false
cast_shadow = 0
mesh = SubResource( 8 )
material/0 = null

[node name="NodesContainer" type="Spatial" parent="." index="7"]
